# pytorch-block-recurrent-transformer

./: .gitignore  README.md  pyproject.toml
block_recurrent_transformer/: kqv_layer.py  nn_components.py
