[tool.poetry]
name = "pytorch-block-recurrent-transformer"
version = "0.1.0"
description = "Pytorch implementation of a Block-Recurrent Transformer, from the paper of the same name by  DeLesley Hutchins, Imanol Schlag, Yuhuai Wu, Ethan Dyer, and Behnam Neys"
authors = ["John Skinner <jskinn7@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "pytorch_block_recurrent_transformer"}]

[tool.poetry.dependencies]
python = "^3.7"
pytorch = "1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
